<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SCAM-SCAM</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="login">LOGIN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="full_name">Full Name</string>
    <string name="create_account">Create Account</string>
    <string name="select_ai_model">Select an AI Model</string>
    <string name="welcome">Welcome!</string>
    <string name="recent_activities">Recent Activities</string>
    <string name="dont_have_account">Don\'t have an account? </string>
    <string name="sign_up_text">Sign Up</string>
    <string name="ai_model_image">AI Model Image</string>
    <string name="model_name">Model Name</string>
    <string name="model_description">Model Description</string>
</resources>